# pydepgraph

./: .gitignore  LICENSE  README.md  pyproject.toml
pydepgraph/: get_dependencies.py  graph_dependencies.py  pydepgraph.py
