[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pydepgraph"
version = "0.1.0"
description = "A project for generating dependency graphs in Python"
authors = ["Jeremy Solbrig <jeremy.solbrig@colostate.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
networkx = ">=3.2.1"
matplotlib = "*"
pipdeptree = ">=2.16.2"

[tool.poetry.scripts]
pydepgraph = "pydepgraph.pydepgraph:main"